tests/compile/transaction_invariant.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile/transaction_invariant.rs:16:13
   |
13 |         let name = txn.query(|rows| {
   |                               ----
   |                               |
   |                               `rows` is a reference that is only valid in the closure body
   |                               has type `&mut Query<'_, '1, v0::Schema>`
...
16 |             txn.query_one(&item.name)
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             `rows` escapes the closure body here
   |             argument requires that `'1` must outlive `'static`
